--- a/package.json
+++ b/package.json
@@ -1,32 +1,64 @@
 {
     "name": "skibbadb-express",
-    "module": "index.ts",
+    "version": "1.0.0",
+    "description": "Express.js integration plugin for SkibbaDB with automatic CRUD operations, pagination, filtering, and security features",
+    "main": "dist/index.js",
+    "types": "dist/index.d.ts",
     "type": "module",
-    "scripts": {
-        "start": "bun run index.ts",
-        "test": "bun run test.ts",
-        "test:security": "bun run security-test.ts",
-        "dev": "bun --watch index.ts"
+    "files": [
+        "dist/**/*",
+        "README.md",
+        "TUTORIAL.md",
+        "PAGINATION_FILTERING_EXAMPLES.md"
+    ],
+    "keywords": [
+        "skibbadb",
+        "express",
+        "database",
+        "crud",
+        "api",
+        "pagination",
+        "filtering",
+        "rest"
+    ],
+    "author": "Your Name",
+    "license": "MIT",
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/yourusername/skibbadb-express.git"
     },
-    "devDependencies": {
-        "@types/bun": "latest",
-        "@types/supertest": "^6.0.3"
+    "bugs": {
+        "url": "https://github.com/yourusername/skibbadb-express/issues"
+    },
+    "homepage": "https://github.com/yourusername/skibbadb-express#readme",
+    "scripts": {
+        "build": "tsc",
+        "dev": "tsc --watch",
+        "test": "vitest run",
+        "test:watch": "vitest",
+        "prepublishOnly": "npm run build",
+        "clean": "rm -rf dist"
     },
     "peerDependencies": {
-        "typescript": "^5.0.0"
+        "express": "^4.0.0 || ^5.0.0",
+        "skibbadb": "^0.1.0"
     },
     "dependencies": {
-        "@types/express": "^5.0.2",
-        "@types/jsdom": "^21.1.7",
         "dompurify": "^3.2.6",
-        "express": "^5.1.0",
         "express-rate-limit": "^7.5.0",
         "express-validator": "^7.2.1",
         "helmet": "^8.1.0",
         "jsdom": "^26.1.0",
-        "skibbadb": "^0.1.0",
+        "xss": "^1.0.15",
+        "zod": "^3.22.0"
+    },
+    "devDependencies": {
+        "@types/express": "^5.0.2",
+        "@types/jsdom": "^21.1.7",
+        "@types/node": "^20.0.0",
+        "@types/supertest": "^6.0.3",
         "supertest": "^7.1.1",
-        "vitest": "^3.1.4",
-        "xss": "^1.0.15"
+        "typescript": "^5.0.0",
+        "vitest": "^3.1.4"
     }
 }
